# ml-medical-cost

./: .dockerignore  .env-example  .gitignore  README.md  models.dvc  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 5d6e0a745cf2_create_initial_tables.py  ad06290acae4_drop_client_ip_column_from_medical_.py
config/: model_config.yml  optuna.yml
database/: config.py  db.py  models.py
docs/: .keepempty
example_configs/: pg_hba.conf.example  postgresql.conf.example
infrastructure/: Dockerfile.backend  Dockerfile.frontend  docker-compose.deploy.yml  docker-compose.services.yml
infrastructure/cert-generator/: Dockerfile
infrastructure/docker-compose/: app.yml  data.yml  pg-config.yml  tls.yml
scripts/: back-entrypoint.sh  front-entrypoint.sh  generate-certs.sh  mlflow-entrypoint.sh  pg-backend-entrypoint.sh  pg-mlflow-entrypoint.sh  pgadmin-entrypoint.sh  tls-postgres-config.sh
services/backend/: bento.py  main.py  predict.py  service.py
services/frontend/: app.py
src/: config_loader.py  main.py  settings.py  stage.py  types.py
src/builders/: model_pipeline_builder.py  optuna_experiment_builder.py  optuna_pipeline_builder.py  optuna_space_builder.py  optuna_trial_grid_builder.py  pipeline_builder.py  pipeline_grid_builder.py  training_builder.py  (+4 more)
tests/: conftest.py  test_bento.py  test_data.py  test_endpoints.py  test_main.py  test_mlflow_logging.py  test_models.py  test_optuna_tuning.py  test_pipeline.py  test_register.py  test_service.py  test_settings.py  test_train.py  test_tuning.py  test_utils.py
(+179 files in other folders)
