[project]
name = "ml-medical-cost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub==0.3.13",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "pyarrow==4.0.0,<22",
    "optuna==4.5.0",
    "mlflow==3.5.0",
    "streamlit==1.50.0",
    "bentoml==1.4.28",
    "psycopg2==2.9.11",
    "pytest==8.4.2",
]


[dependency-groups]
server = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pyarrow==4.0.0,<22",
    "scikit-learn==1.7.2",
    "mlflow==3.5.0",
    "bentoml==1.4.28",
    "psycopg2==2.9.11",
]

client = [
    "streamlit==1.50.0",
]